--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="SWS Water Purifier"
+                                        alt="water purifier for kitchen faucet Purifier"
                                         src="./assets/SWSPurifier/3.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -282,7 +282,7 @@
                                             tabindex="0"
                                             class="focus:outline-none text-xs text-gray-600 mt-2"
                                         >
-                                            SWS Water Purifier Filter Hi-Tech
+                                        water purifier for kitchen faucet Filter Hi-Tech
                                             Ceramic Cartridge for Safe, Clean,
                                             Healthier, Energized Water –
                                             Drinking & Washing Face, Teeth,
@@ -1600,7 +1600,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="SWS Water Purifier"
+                                        alt="water purifier for kitchen faucet"
                                         src="./assets/SWSPurifier/3.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
