--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -284,7 +284,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >SWS Water Purifier</span
+                                        >water purifier for kitchen faucet</span
                                     >
                                 </div>
                             </li>
@@ -395,7 +395,7 @@
                             </h2>
 
                             <p class="text-gray-500">
-                                SWS Water Purifier Filter Hi-Tech Ceramic
+                                water purifier for kitchen faucet Filter Hi-Tech Ceramic
                                 Cartridge for Safe, Clean, Healthier, Energized
                                 Water – Drinking & Washing Face, Teeth, Fruits,
                                 Vegetables & Cooking
@@ -785,7 +785,7 @@
                                                 id="product_en"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="SWS Water Purifier"
+                                                value="water purifier for kitchen faucet"
                                                 disabled
                                             />
                                         </div>
