--- a/store.html
+++ b/store.html
@@ -243,7 +243,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="SWS Water Purifier"
+                                        alt="water purifier for kitchen faucet"
                                         src="./assets/SWSPurifier/3.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -263,7 +263,7 @@
                                             tabindex="0"
                                             class="focus:outline-none text-xs text-gray-600 mt-2"
                                         >
-                                            SWS Water Purifier Filter Hi-Tech
+                                        water purifier for kitchen faucet Filter Hi-Tech
                                             Ceramic Cartridge for Safe, Clean,
                                             Healthier, Energized Water –
                                             Drinking & Washing Face, Teeth,
@@ -615,7 +615,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="SWS Water Purifier"
+                                        alt="water purifier for kitchen faucet"
                                         src="./assets/MiniFaucetWaterFilter/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -1317,7 +1317,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="SWS Water Purifier"
+                                        alt="water purifier for kitchen faucet"
                                         src="./assets/360DegreeRotatingFaucet/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -2041,7 +2041,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="SWS Water Purifier"
+                                        alt="water purifier for kitchen faucet"
                                         src="./assets/SWSPurifier/3.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -2427,7 +2427,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="SWS Water Purifier"
+                                        alt="water purifier for kitchen faucet"
                                         src="./assets/MiniFaucetWaterFilter/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
