--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold"
                                             >
-                                                SWS Water Purifier
+                                            water purifier for kitchen faucet
                                             </h2>
                                         </div>
                                         <p
@@ -640,7 +640,7 @@
                                 <a
                                     href="./SWSWaterPurifier.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >SWS Water Purifier</a
+                                    >water purifier for kitchen faucet</a
                                 >
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
