--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -416,7 +416,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                            Filtre de robinet rotatif à 360 degrés extensible et efficace
+                            Efficient Extendable 360 Degree Rotating Faucet Filter
                             
                             </h2>
 
