--- a/store.html
+++ b/store.html
@@ -317,7 +317,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                            Filtre de robinet rotatif à 360 degrés extensible et efficace
+                                            Efficient Extendable 360 Degree Rotating Faucet Filter
                                             </h2>
                                         </div>
                                         <p
