--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold"
                                             >
-                                            Filtre de robinet rotatif à 360 degrés extensible et efficace
+                                            Efficient Extendable 360 Degree Rotating Faucet Filter
                                             </h2>
                                         </div>
                                         <p
