--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -621,7 +621,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Buy Filtre de robinet rotatif à 360 degrés extensible et efficace
+                                Buy Efficient Extendable 360 Degree Rotating Faucet Filter
                             </h1>
 
                             <p class="mt-6 max-w-xl">
