--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="Filtre de robinet rotatif à 360 degrés extensible et efficace"
+                                        alt="Efficient Extendable 360 Degree Rotating Faucet Filter"
                                         src="./assets/SwivelFaucet/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -645,7 +645,7 @@
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Filtre de robinet rotatif à 360 degrés extensible et efficace</a
+                                    >Efficient Extendable 360 Degree Rotating Faucet Filter</a
                                 >
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
@@ -1662,7 +1662,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="Filtre de robinet rotatif à 360 degrés extensible et efficace"
+                                        alt="فلتر صنبور دوار قابل للتمديد 360 درجة"
                                         src="./assets/SwivelFaucet/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
