--- a/TanklessInstantElectricWaterHeaterFaucet.html
+++ b/TanklessInstantElectricWaterHeaterFaucet.html
@@ -366,8 +366,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                Tankless Instant Electric Water Heater Faucet,
-                                Kitchen, Hot or Cold Water
+                            Instant electric water heater faucet
                             </h2>
 
                             <ul class="text-gray-500 list-disc">
@@ -545,7 +544,7 @@
                                                 id="product_en"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="Tankless Instant Electric Water Heater Faucet"
+                                                value="Instant electric water heater faucet"
                                                 disabled
                                             />
                                         </div>
