--- a/TanklessInstantElectricWaterHeaterFaucet.html
+++ b/TanklessInstantElectricWaterHeaterFaucet.html
@@ -284,8 +284,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >Tankless Instant Electric Water Heater
-                                        Faucet</span
+                                        >Instant electric water heater faucet</span
                                     >
                                 </div>
                             </li>
@@ -457,8 +456,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Buy Tankless Instant Electric Water Heater
-                                Faucet
+                                Buy Instant electric water heater faucet
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -722,8 +720,7 @@
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Tankless Instant Electric Water Heater
-                                    Faucet</a
+                                    >Instant electric water heater faucet</a
                                 >
                             </div>
                         </div>
