--- a/UniversalRoboticArmFaucet.html
+++ b/UniversalRoboticArmFaucet.html
@@ -734,8 +734,7 @@
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Tankless Instant Electric Water Heater
-                                    Faucet</a
+                                    >Instant electric water heater faucet</a
                                 >
                             </div>
                         </div>
