--- a/index.html
+++ b/index.html
@@ -399,17 +399,14 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold"
                                             >
-                                                Tankless Instant Electric Water
-                                                Heater Faucet
+                                            Instant electric water heater faucet
                                             </h2>
                                         </div>
                                         <p
                                             tabindex="0"
                                             class="focus:outline-none text-xs text-gray-600 mt-2"
                                         >
-                                            Tankless Instant Electric Water
-                                            Heater Faucet, Kitchen, Hot or Cold
-                                            Water
+                                        Instant electric water heater faucet
                                         </p>
                                         <div class="flex mt-4">
                                             <div>
@@ -650,7 +647,7 @@
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Tankless Instant Electric Water Heater
+                                    >Instant electric water heater faucet
                                     Faucet</a
                                 >
                             </div>
