--- a/5LayerFaucetWaterFilter.html
+++ b/5LayerFaucetWaterFilter.html
@@ -857,10 +857,9 @@
                                     >Efficient Extendable 360 Degree Rotating Faucet Filter</a
                                 >
                                 <a
-                                    href="./TanklessInstantElectricWaterHeaterFaucet.html"
+                                    href="./Instant electric water heater faucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Instant electric water heater faucet
-                                    Faucet</a
+                                    >Instant electric water heater faucet</a
                                 >
                             </div>
                         </div>
