--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -885,8 +885,7 @@
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Instant electric water heater faucet
-                                    Faucet</a
+                                    >Instant electric water heater faucet</a
                                 >
                             </div>
                         </div>
