--- a/5LayerFaucetWaterFilter.html
+++ b/5LayerFaucetWaterFilter.html
@@ -1744,7 +1744,7 @@
                                     >Robinet pivotant à 360 degrés</a
                                 >
                                 <a
-                                    href="./TanklessInstantElectricWaterHeaterFaucet.html"
+                                    href="./Instant electric water heater faucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >Robinet de chauffe-eau électrique
                                     instantané sans réservoir</a
@@ -2618,7 +2618,7 @@
                                     </a
                                 >
                                 <a
-                                    href="./TanklessInstantElectricWaterHeaterFaucet.html"
+                                    href="./Instant electric water heater faucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >صنبور تسخين الماء 
                                     الفوري للمطبخ والحمام
