--- a/360DegreeRotatingFaucetWaterFilter.html
+++ b/360DegreeRotatingFaucetWaterFilter.html
@@ -340,9 +340,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                360 Degree Rotating Faucet Water Filter Water
-                                Purifier Water Saving Faucet Diffuser Kitchen
-                                Accessories Water Filter Adapter
+                                360 Degree Rotating Faucet Water Filter
                             </h2>
 
                             <p class="text-gray-500">
