--- a/store.html
+++ b/store.html
@@ -625,7 +625,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                Mini Faucet Water Filter
+                                            Water Filter water Faucet
                                             </h2>
                                         </div>
                                         <p
