--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -284,7 +284,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >Mini Faucet Water Filter</span
+                                        >Water Filter water Faucet</span
                                     >
                                 </div>
                             </li>
@@ -365,7 +365,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                Mini Faucet Water Filter
+                            Water Filter water Faucet
                             </h2>
 
                             <p class="text-gray-500">
@@ -443,7 +443,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Buy Mini Faucet Water Filter
+                                Buy Water Filter water Faucet
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -529,7 +529,7 @@
                                                 id="product_en"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="Mini Faucet Water Filter"
+                                                value="Water Filter water Faucet"
                                                 disabled
                                             />
                                         </div>
