--- a/SuperStrongWaterproofAdhesiveTape.html
+++ b/SuperStrongWaterproofAdhesiveTape.html
@@ -370,7 +370,7 @@
                             </h2>
 
                             <p class="text-gray-500">
-                                Super Strong Waterproof Insulation Tape to Stop
+                                Super Strong Waterproof Adhesive Tape to Stop
                                 Leaks, Self-adhesive Performance Repair Tape for
                                 Self-Fixing Joints and for 150cm Insulation
                                 Ducts
