--- a/store.html
+++ b/store.html
@@ -700,7 +700,7 @@
                                             tabindex="0"
                                             class="focus:outline-none text-xs text-gray-600 mt-2"
                                         >
-                                            Super Strong Waterproof Insulation
+                                            Super Strong Waterproof Adhesive
                                             Tape to Stop Leaks, Self-adhesive
                                             Performance Repair Tape for
                                             Self-Fixing Joints and for 150cm
