--- a/store.html
+++ b/store.html
@@ -756,7 +756,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                Universal robotic arm faucet
+                                            Universal Rotating Faucet Extender 1080°
                                             </h2>
                                         </div>
                                         <p
