--- a/UniversalRoboticArmFaucet.html
+++ b/UniversalRoboticArmFaucet.html
@@ -284,7 +284,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >Universal robotic arm faucet</span
+                                        >Universal Rotating Faucet Extender 1080°</span
                                     >
                                 </div>
                             </li>
@@ -365,7 +365,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                Universal robotic arm faucet
+                            Universal Rotating Faucet Extender 1080°
                             </h2>
 
                             <p class="text-gray-500">
@@ -470,7 +470,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Buy Universal robotic arm faucet
+                                Buy Universal Rotating Faucet Extender 1080°
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -556,7 +556,7 @@
                                                 id="product_en"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="Universal robotic arm faucet"
+                                                value="Universal Rotating Faucet Extender 1080°"
                                                 disabled
                                             />
                                         </div>
