--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -1935,7 +1935,7 @@
                                 <a
                                     href="./SWSWaterPurifier.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Purificateur d'eau SWS</a
+                                    >water purifier-Purificateur d'eau pour robinet de cuisine</a
                                 >
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
