--- a/index.html
+++ b/index.html
@@ -937,14 +937,14 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold"
                                             >
-                                                Purificateur d'eau SWS
+                                            water purifier-Purificateur d'eau pour robinet de cuisine
                                             </h2>
                                         </div>
                                         <p
                                             tabindex="0"
                                             class="focus:outline-none text-xs text-gray-600 mt-2"
                                         >
-                                            Filtre purificateur d'eau SWS
+                                            Filtre water purifier-Purificateur d'eau pour robinet de cuisine
                                             Hi-Tech Cartouche en céramique pour
                                             sûr, propre, Une eau plus saine et
                                             énergisée – Boire et laver le
@@ -1308,7 +1308,7 @@
                                 <a
                                     href="./SWSWaterPurifier.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Purificateur d'eau SWS</a
+                                    >water purifier-Purificateur d'eau pour robinet de cuisine</a
                                 >
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
