--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -1262,7 +1262,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >SWS Purificateur d'eau</span
+                                        >water purifier-Purificateur d'eau pour robinet de cuisine</span
                                     >
                                 </div>
                             </li>
@@ -1369,7 +1369,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                SWS purificateur d'eau
+                            water purifier-Purificateur d'eau pour robinet de cuisine
                             </h2>
 
                             <p class="text-gray-500">
@@ -1678,7 +1678,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Acheter SWS Purificateur d'eau
+                                Acheter water purifier-Purificateur d'eau pour robinet de cuisine
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -1765,7 +1765,7 @@
                                                 id="product_fr"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="SWS Purificateur d'eau"
+                                                value="water purifier-Purificateur d'eau pour robinet de cuisine"
                                                 disabled
                                             />
                                         </div>
