--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -1184,7 +1184,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >Robinet pivotant à 360 degrés</span
+                                        >Filtre de robinet rotatif à 360 degrés extensible et efficace</span
                                     >
                                 </div>
                             </li>
@@ -1316,7 +1316,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                Robinet pivotant à 360 degrés
+                            Filtre de robinet rotatif à 360 degrés extensible et efficace
                             </h2>
 
                             <p class="text-gray-500">
@@ -1524,7 +1524,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Acheter Robinet pivotant à 360 degrés
+                                Acheter Filtre de robinet rotatif à 360 degrés extensible et efficace
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -1611,7 +1611,7 @@
                                                 id="product_fr"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="Robinet pivotant à 360 degrés"
+                                                value="Filtre de robinet rotatif à 360 degrés extensible et efficace"
                                                 disabled
                                             />
                                         </div>
@@ -1786,7 +1786,7 @@
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Robinet pivotant à 360 degrés</a
+                                    >Filtre de robinet rotatif à 360 degrés extensible et efficace</a
                                 >
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
