--- a/store.html
+++ b/store.html
@@ -1200,7 +1200,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                Robinet pivotant à 360 degrés
+                                            Filtre de robinet rotatif à 360 degrés extensible et efficace
                                             </h2>
                                         </div>
                                         <p
@@ -1773,7 +1773,7 @@
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Robinet pivotant à 360 degrés</a
+                                    >Filtre de robinet rotatif à 360 degrés extensible et efficace</a
                                 >
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
