--- a/5LayerFaucetWaterFilter.html
+++ b/5LayerFaucetWaterFilter.html
@@ -1746,8 +1746,7 @@
                                 <a
                                     href="./Instant electric water heater faucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Robinet de chauffe-eau électrique
-                                    instantané sans réservoir</a
+                                    >Robinet de chauffe-eau électrique instantané</a
                                 >
                             </div>
                         </div>
