--- a/TanklessInstantElectricWaterHeaterFaucet.html
+++ b/TanklessInstantElectricWaterHeaterFaucet.html
@@ -1019,8 +1019,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >Robinet de chauffe-eau électrique
-                                        instantané sans réservoir</span
+                                        >Robinet de chauffe-eau électrique instantané</span
                                     >
                                 </div>
                             </li>
@@ -1193,8 +1192,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Acheter Robinet de chauffe-eau électrique
-                                instantané sans réservoir
+                                Acheter Robinet de chauffe-eau électrique instantané
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -1461,8 +1459,7 @@
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Robinet de chauffe-eau électrique
-                                    instantané sans réservoir</a
+                                    >Robinet de chauffe-eau électrique instantané</a
                                 >
                             </div>
                         </div>
