--- a/index.html
+++ b/index.html
@@ -1072,8 +1072,7 @@
                                             tabindex="0"
                                             class="focus:outline-none text-xs text-gray-600 mt-2"
                                         >
-                                            Robinet de chauffe-eau électrique
-                                            instantané sans réservoir, cuisine,
+                                            Robinet de chauffe-eau électrique instantané, cuisine,
                                             eau chaude ou froide
                                         </p>
                                         <div class="flex mt-4">
@@ -1318,8 +1317,7 @@
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Robinet de chauffe-eau électrique
-                                    instantané sans réservoir</a
+                                    >Robinet de chauffe-eau électrique instantané</a
                                 >
                             </div>
                         </div>
