--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -1945,8 +1945,7 @@
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Robinet de chauffe-eau électrique
-                                    instantané sans réservoir</a
+                                    >Robinet de chauffe-eau électrique instantané</a
                                 >
                             </div>
                         </div>
