--- a/TanklessInstantElectricWaterHeaterFaucet.html
+++ b/TanklessInstantElectricWaterHeaterFaucet.html
@@ -1100,8 +1100,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                Robinet Chauffe-Eau Électrique Instantané Sans
-                                Réservoir, Cuisine, Eau Chaude ou Froide
+                                Robinet Chauffe-Eau Électrique Instantané, Cuisine, Eau Chaude ou Froide
                             </h2>
 
                             <ul class="text-gray-500 list-disc">
