--- a/TanklessInstantElectricWaterHeaterFaucet.html
+++ b/TanklessInstantElectricWaterHeaterFaucet.html
@@ -1093,7 +1093,7 @@
                                 <a
                                     href="#"
                                     class="text-indigo-600 hover:underline"
-                                    >Sans réservoir</a
+                                    >Tankless</a
                                 >
                             </p>
 
