--- a/index.html
+++ b/index.html
@@ -1064,8 +1064,7 @@
                                                 class="focus:outline-none text-lg font-semibold"
                                             >
                                                 Robinet de chauffe-eau
-                                                électrique instantané sans
-                                                réservoir
+                                                électrique instantané
                                             </h2>
                                         </div>
                                         <p
