--- a/store.html
+++ b/store.html
@@ -1264,8 +1264,7 @@
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
                                                 Robinet de chauffe-eau
-                                                électrique instantané sans
-                                                réservoir
+                                                électrique instantané
                                             </h2>
                                         </div>
                                         <p
