--- a/360DegreeRotatingFaucetWaterFilter.html
+++ b/360DegreeRotatingFaucetWaterFilter.html
@@ -1142,7 +1142,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                Filtre à eau rotatif à 360 degrés pour robine
+                            Filtre à eau de robinet rotatif à 360 degrés
                             </h2>
 
                             <p class="text-gray-500">
@@ -1413,7 +1413,7 @@
                                                 id="product_fr"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="Filtre à eau rotatif à 360 degrés pour robine"
+                                                value="Filtre à eau de robinet rotatif à 360 degrés"
                                                 disabled
                                             />
                                         </div>
