--- a/360DegreeRotatingFaucetWaterFilter.html
+++ b/360DegreeRotatingFaucetWaterFilter.html
@@ -1086,8 +1086,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >Filtre à eau rotatif à 360 degrés pour
-                                        robine</span
+                                        >Filtre à eau de robinet rotatif à 360 degrés</span
                                     >
                                 </div>
                             </li>
@@ -1325,8 +1324,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Acheter Filtre à eau rotatif à 360 degrés pour
-                                robine
+                                Acheter Filtre à eau de robinet rotatif à 360 degrés
                             </h1>
 
                             <p class="mt-6 max-w-xl">
