--- a/store.html
+++ b/store.html
@@ -1324,8 +1324,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                Filtre à eau rotatif à 360
-                                                degrés pour robine
+                                            Filtre à eau de robinet rotatif à 360 degrés
                                             </h2>
                                         </div>
                                         <p
