--- a/store.html
+++ b/store.html
@@ -1387,8 +1387,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                Filtre à eau à 5 couches pour
-                                                robinet
+                                            Filtre à eau de robinet à 5 couches
                                             </h2>
                                         </div>
                                         <p
