--- a/store.html
+++ b/store.html
@@ -1518,7 +1518,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                Mini filtre à eau de robine
+                                            Filtre à eau robinet d'eau
                                             </h2>
                                         </div>
                                         <p
