--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -1006,7 +1006,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >Mini filtre à eau de robine</span
+                                        >Filtre à eau robinet d'eau</span
                                     >
                                 </div>
                             </li>
@@ -1087,7 +1087,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                Mini filtre à eau de robine
+                            Filtre à eau robinet d'eau
                             </h2>
 
                             <p class="text-gray-500">
@@ -1167,7 +1167,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Acheter Mini filtre à eau de robine
+                                Acheter Filtre à eau robinet d'eau
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -1254,7 +1254,7 @@
                                                 id="product_fr"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="Mini filtre à eau de robine"
+                                                value="Filtre à eau robinet d'eau"
                                                 disabled
                                             />
                                         </div>
