--- a/SuperStrongWaterproofAdhesiveTape.html
+++ b/SuperStrongWaterproofAdhesiveTape.html
@@ -1004,7 +1004,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >Ruban adhésif étanche Super fort</span
+                                        >Ruban Adhésif Imperméable Super Fort</span
                                     >
                                 </div>
                             </li>
@@ -1085,7 +1085,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                Ruban adhésif étanche Super fort
+                            Ruban Adhésif Imperméable Super Fort
                             </h2>
 
                             <p class="text-gray-500">
@@ -1165,7 +1165,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Acheter Ruban adhésif étanche Super fort
+                                Acheter Ruban Adhésif Imperméable Super Fort
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -1252,7 +1252,7 @@
                                                 id="product_fr"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="Ruban adhésif étanche Super fort"
+                                                value="Ruban Adhésif Imperméable Super Fort"
                                                 disabled
                                             />
                                         </div>
