--- a/store.html
+++ b/store.html
@@ -1588,7 +1588,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                Ruban adhésif étanche Super fort
+                                            Ruban Adhésif Imperméable Super Fort
                                             </h2>
                                         </div>
                                         <p
