--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -1080,7 +1080,7 @@
                                 <a
                                     href="#"
                                     class="text-indigo-600 hover:underline"
-                                    >Mini</a
+                                    >Filtre</a
                                 >
                             </p>
 
