--- a/SuperStrongWaterproofAdhesiveTape.html
+++ b/SuperStrongWaterproofAdhesiveTape.html
@@ -1078,7 +1078,7 @@
                                 <a
                                     href="#"
                                     class="text-indigo-600 hover:underline"
-                                    >Mini</a
+                                    >Ruban</a
                                 >
                             </p>
 
