--- a/UniversalRoboticArmFaucet.html
+++ b/UniversalRoboticArmFaucet.html
@@ -1115,7 +1115,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                Robinet à bras robotique universel
+                            Rallonge de robinet rotative universelle 1080°
                             </h2>
 
                             <p class="text-gray-500">
@@ -1224,7 +1224,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Acheter Robinet à bras robotique universel
+                                Acheter Rallonge de robinet rotative universelle 1080°
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -1311,7 +1311,7 @@
                                                 id="product_fr"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="Robinet à bras robotique universel"
+                                                value="Rallonge de robinet rotative universelle 1080°"
                                                 disabled
                                             />
                                         </div>
