--- a/store.html
+++ b/store.html
@@ -1658,8 +1658,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                Robinet à bras robotique
-                                                universel
+                                            Rallonge de robinet rotative universelle 1080°
                                             </h2>
                                         </div>
                                         <p
