--- a/UniversalRoboticArmFaucet.html
+++ b/UniversalRoboticArmFaucet.html
@@ -1033,8 +1033,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >Robinet à bras robotique
-                                        universel</span
+                                        >Rallonge de robinet rotative universelle 1080°</span
                                     >
                                 </div>
                             </li>
