--- a/UniversalRoboticArmFaucet.html
+++ b/UniversalRoboticArmFaucet.html
@@ -1013,7 +1013,7 @@
                                     <a
                                         href="./store.html"
                                         class="ml-1 text-sm font-medium text-gray-700 hover:text-gray-900 md:ml-2"
-                                        >Des produits</a
+                                        >Les produits</a
                                     >
                                 </div>
                             </li>
