--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -2748,7 +2748,7 @@
                                                 id="product_ar"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="SWS جهاز تصفية و تنقية المياه من 5 طبقات للمنزل والمطبخ"
+                                                value="فلتر تصفية وتنقية المياه من 5 طبقات للمنزل والمطبخ والحمام"
                                                 disabled
                                             />
                                         </div>
